--- a/.ci/azure-pipelines-v2.yml
+++ b/.ci/azure-pipelines-v2.yml
@@ -7,20 +7,16 @@ resources:
       endpoint: AIArchitecturesAndPractices-GitHub
 
 variables:
-  BuildConfiguration: Release
-  BuildBinariesDirectory: $(Build.BinariesDirectory)
-  BuildPlatform: any cpu
-  DotNetCoreBuildVersion: 2.2.108
-  DotNetRuntimeTarget: ubuntu.18.04-x64
-  AgentToolsDirectory: $(Agent.ToolsDirectory)
   CloudPlatform: AzureCloud
-  ProductName: Trident
-  TridentWorkloadType: $(WorkloadType)
-  TridentWorkloadTypeShort: $(WorkloadTypeShort)
-  DeployLocations: eastus
-  Agent: agce-ai
+  TridentWorkloadType: ai-ml-int
+  TridentWorkloadTypeShort: aimlrts
+  DeployLocation: eastus
   azureSubscription: AG-AzureCAT-AIDevOps-Test-COGSNonProd-IO1685734(0ca618d2-22a8-413a-96d0-0f1b531129c3)
   azure_subscription: 0ca618d2-22a8-413a-96d0-0f1b531129c3
+  TestPostfix: ""
+  DeploymentName: MLAKSDeployAMLJob
+
+# In additional to the above variables, the "template" parameter of the last step must also be hard coded for each workload
 
 trigger:
   batch: true
@@ -32,9 +28,6 @@ jobs:
 - job: build_deploy_ai
   displayName: 'Build deploy AI'
 
-  strategy:
-    maxParallel: 8
-    matrix: $[ dependencies.build_relayer_sources.outputs['GenDeployMatrix.DeployRegions'] ]
   timeoutInMinutes: 180
 
   workspace:
@@ -50,27 +43,17 @@ jobs:
 
   steps:
 
-  #
-  # DL Workload Deployment
-  #
-    # use the ML team templates to build and deploy workloads for each region
-  - script: |
-      docker stop $(docker ps -a -q)
-      docker rm $(docker ps -a -q)
-      docker system prune -a -f
-      rm -rf AI
-      git clone --recurse-submodules https://github.com/microsoft/AI.git
-    displayName: 'git clone sources'
+  - template: .ci/steps/docker_clean.yml@aitemplates
 
   - bash: |
       Deploy_Location_Short=$(echo $DeployLocation | cut -c1-12)
       echo "##vso[task.setvariable variable=Deploy_Location_Short]$Deploy_Location_Short"
+    displayName: "Create short name for AKS"
 
-
-  - template: .ci/steps/deploy_steps.yml@aitemplates
+  - template: .ci/steps/deploy_notebook_steps.yml@aitemplates
     parameters:
-      deployment_name: MLBatchDeployAMLJob
-      template: MLBatchDeployAMLJob.yml
+      deployment_name: $(DeploymentName)
+      template: MLAKSDeployAMLJob.yml
       azureSubscription: $(azureSubscription)
       azure_subscription: $(azure_subscription)
       azureresourcegroup: $(AIResourceGroupName)
@@ -85,6 +68,6 @@ jobs:
       ENVIRONMENT_PREFIX: $(EnvironmentPrefix)
       deploymentguidtag: $(DeploymentGuidTag)
       aks_name: $(TridentWorkloadTypeShort)$(Deploy_Location_Short)
-      python_path: "$(System.DefaultWorkingDirectory)/AI/submodules/DeployMLModelPipelines"
-      location: AI/submodules/DeployMLModelPipelines
-      python_secret_root: "./AI/"
+      python_path: "$(System.DefaultWorkingDirectory)"
+      location: "."
+      python_secret_root: "./"
