--- a/.ci/azure-pipelines-v2.yml
+++ b/.ci/azure-pipelines-v2.yml
@@ -15,7 +15,7 @@ variables:
   azure_subscription: 0ca618d2-22a8-413a-96d0-0f1b531129c3
   TestPostfix: ""
   DeploymentName: MLAKSDeployAMLJob
-  PythonPath: "/{{cokiecutter.project_name"
+  PythonPath: "/{{cokiecutter.project_name}}"
   Agent: "Hosted Ubuntu 1604"
 
 # In additional to the above variables, the "template" parameter of the last step must also be hard coded for each workload
@@ -71,5 +71,5 @@ jobs:
       deploymentguidtag: $(DeploymentGuidTag)
       aks_name: $(TridentWorkloadTypeShort)$(Deploy_Location_Short)
       python_path: $(System.DefaultWorkingDirectory)$(PythonPath)
-      location: "."
+      location: "{{cokiecutter.project_name}}"
       python_secret_root: "./"
