Update azure-pipelines-v2.yml for Azure Pipelines

--- a/.ci/azure-pipelines-v2.yml
+++ b/.ci/azure-pipelines-v2.yml
@@ -15,7 +15,7 @@ variables:
   azure_subscription: 0ca618d2-22a8-413a-96d0-0f1b531129c3
   TestPostfix: ""
   DeploymentName: MLAKSDeployAMLJob
-  ProjectLocation: {{cookiecutter.project_name}}
+  ProjectLocation: "{{cookiecutter.project_name}}""
   PythonPath: /$(ProjectLocation)
   Agent: "Hosted Ubuntu 1604"
 
