--- a/{{cookiecutter.project_name}}/environment.yml
+++ b/{{cookiecutter.project_name}}/environment.yml
@@ -14,10 +14,11 @@ dependencies:
     - nest_asyncio>=0.9.10
     - toolz>=0.9.0
     - tqdm>=4.23.4
-    - azure-cli>=2.0.50
+    - azure-cli==2.0.63
     - prompt_toolkit>=2.0.7
     - lightgbm>=2.1.2
     - papermill>=0.14.1
     - python-dotenv==0.10.1
     - azureml-sdk[notebooks]==1.0.57
+    - git+https://github.com/Microsoft/StatisticsTracker.git
     - locustio==0.11.0
