--- a/.ci/azure-pipelines-v2.yml
+++ b/.ci/azure-pipelines-v2.yml
@@ -47,6 +47,13 @@ jobs:
 
   steps:
 
+  - template: .ci/steps/cleanuptask.yml@aitemplates
+    parameters:
+      azureSubscription: ${{parameters.azureSubscription}}
+      conda: ${{parameters.conda}}
+      azureresourcegroup: ${{parameters.azureresourcegroup}}
+      doCleanup: True
+
   - template: .ci/steps/docker_clean.yml@aitemplates
 
   - bash: |
