Update azure-pipelines-v2.yml for Azure Pipelines

--- a/.ci/azure-pipelines-v2.yml
+++ b/.ci/azure-pipelines-v2.yml
@@ -49,9 +49,8 @@ jobs:
 
   - template: .ci/steps/cleanuptask.yml@aitemplates
     parameters:
-      azureSubscription: ${{parameters.azureSubscription}}
-      conda: ${{parameters.conda}}
-      azureresourcegroup: ${{parameters.azureresourcegroup}}
+      azureSubscription: $(azureSubscription)
+      azureresourcegroup: $(azureresourcegroup)
       doCleanup: True
 
   - template: .ci/steps/docker_clean.yml@aitemplates
