--- a/.ci/azure-pipelines-v2.yml
+++ b/.ci/azure-pipelines-v2.yml
@@ -15,6 +15,12 @@ trigger:
     include:
     - master
 
+pr:
+  autoCancel: true
+  branches:
+    include:
+    - master
+
 stages:
 - template: .ci/stages/deploy_notebooks_stages_v2.yml@aitemplates
   parameters:
