--- a/{{cookiecutter.project_name}}/environment.yml
+++ b/{{cookiecutter.project_name}}/environment.yml
@@ -5,21 +5,21 @@ dependencies:
   - python=3.6.2
   - pip
   - tornado<6
-  - nb_conda_kernels==2.1.0
-  - ipywidgets==7.3.0
-  - pandas>=0.23.3
-  - scikit-learn>=0.19.1
-  - pip:
-    - urllib3==1.25.7
-    - aiohttp>=3.3.2
-    - nest_asyncio>=0.9.10
-    - toolz>=0.9.0
-    - tqdm>=4.23.4
-    - azure-cli==2.0.77
-    - prompt_toolkit>=2.0.7
-    - lightgbm>=2.1.2
-    - papermill>=0.14.1
-    - python-dotenv==0.10.3
-    - azureml-sdk[notebooks]==1.0.76
-    - git+https://github.com/microsoft/AI-Utilities.git
-    - locustio==0.13.2
+  - nb_conda_kernels
+  - ipywidgets
+  - pandas
+  - scikit-learn
+  - urllib3
+  - pip:    
+    - aiohttp
+    - nest_asyncio
+    - toolz
+    - tqdm
+    - azure-cli
+    - prompt_toolkit
+    - lightgbm
+    - papermill
+    - python-dotenv
+    - azureml-sdk[notebooks]
+    - locustio
+    - git+https://github.com/microsoft/AI-Utilities.git    
