--- a/{{cookiecutter.project_name}}/environment.yml
+++ b/{{cookiecutter.project_name}}/environment.yml
@@ -21,5 +21,6 @@ dependencies:
     - papermill
     - python-dotenv
     - azureml-sdk[notebooks]==1.0.57
+    - azure-core
     - locustio
     - git+https://github.com/microsoft/AI-Utilities.git    
