--- a/{{cookiecutter.project_name}}/environment.yml
+++ b/{{cookiecutter.project_name}}/environment.yml
@@ -3,7 +3,7 @@ channels:
   - conda-forge
 dependencies:
   - python=3.6.2
-  - pip
+  - pip=19.3.1
   - tornado<6
   - nb_conda_kernels
   - ipywidgets
