--- a/{{cookiecutter.project_name}}/environment.yml
+++ b/{{cookiecutter.project_name}}/environment.yml
@@ -20,7 +20,7 @@ dependencies:
     - lightgbm
     - papermill
     - python-dotenv
-    - azureml-sdk[notebooks]==1.0.57
+    - azureml-core==1.0.57
     - azure-core
     - locustio
     - git+https://github.com/microsoft/AI-Utilities.git    
