--- a/.ci/azure-pipelines-v2.yml
+++ b/.ci/azure-pipelines-v2.yml
@@ -3,7 +3,7 @@
 # A Github Service Connection must also be created with the name "AIArchitecturesAndPractices-GitHub"
 # https://docs.microsoft.com/en-us/azure/devops/pipelines/process/demands?view=azure-devops&tabs=yaml
 #
-# An Agent_Name Variable must be creating in the Azure DevOps UI. 
+# An Agent_Name Variable must be creating in the Azure DevOps UI.
 # https://docs.microsoft.com/en-us/azure/devops/pipelines/process/variables?view=azure-devops&tabs=yaml%2Cbatch#secret-variables
 #
 # This must point to an Agent Pool, with a Self-Hosted Linux VM with a DOcker.
@@ -32,6 +32,6 @@ stages:
 - template: .ci/stages/deploy_notebooks_stages_v2.yml@aitemplates
   parameters:
     Agent: $(Agent_Name)
-    jobDisplayName: MLAKSDeployAMLJob
+    jobDisplayName: az-ml-realtime-score
     DefaultWorkingDirectory: $(System.DefaultWorkingDirectory)
-    workload_vars: ../vars/ml_realtime_scoring.yml
+    workload_vars: ../vars/az-ml-realtime-score.yml
