Adding First Version of Template (#1)
* Initial CODE_OF_CONDUCT.md commit

* Initial README.md commit

* Initial SECURITY.md commit

* Initial LICENSE commit

* Adding first template files

* Adding first template files

* Adding first template files

* Update azure-pipelines.yml for Azure Pipelines

* Adding first template files

* Adding first template files

* Adding first template files

* Adding first template files

* Adding first template files

* Adding first template files

* adding test notebooks

* Adding first template files

* Adding Pylint configuration

* Adding Pylint configuration

* Adding Pylint configuration

* Adding Pylint configuration

* Adding Pylint configuration

* Adding Pylint configuration

* Adding Pylint configuration

* Adding Pylint configuration

* Adding Pylint configuration

* Update README.md

* updates

Co-authored-by: Microsoft Open Source <microsoftopensource@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+
+# Project Configuration Files
+workspace_conf.yml
+*.output_ipynb
+.azureml
+pylint-results.xml
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
