Initial Merge into Master (#2)
* Initial CODE_OF_CONDUCT.md commit

* Initial README.md commit

* Initial SECURITY.md commit

* Initial LICENSE commit

* Adding first template files

* Adding first template files

* Adding first template files

* Update azure-pipelines.yml for Azure Pipelines

* Adding first template files

* Adding first template files

* Adding first template files

* Adding first template files

* Adding first template files

* Adding first template files

* adding test notebooks

* Adding first template files

* Adding Pylint configuration

* Adding Pylint configuration

* Adding Pylint configuration

* Adding Pylint configuration

* Adding Pylint configuration

* Adding Pylint configuration

* Adding Pylint configuration

* Adding Pylint configuration

* Adding Pylint configuration

* Update README.md

* updates

* Update environment.yml

* Update environment.yml

* Update azure-pipelines.yml for Azure Pipelines

* Update azure-pipelines.yml for Azure Pipelines

* Adding Pylint configuration

* Adding Pylint configuration

* Adding Pylint configuration

* Adding Pylint configuration

Co-authored-by: Microsoft Open Source <microsoftopensource@users.noreply.github.com>

--- a/.ci/azure-pipelines.yml
+++ b/.ci/azure-pipelines.yml
@@ -16,6 +16,14 @@ resources:
       name: microsoft/AI
       endpoint: AIArchitecturesAndPractices-GitHub
 
+schedules:
+- cron: "*/10 * * * *"
+  displayName: Daily midnight build
+  always: true
+  branches:
+    include:
+    - master
+
 trigger:
   batch: true
   branches:
