--- a/environment.yml
+++ b/environment.yml
@@ -12,4 +12,5 @@ dependencies:
     - papermill
     - azureml-core
     - pylint-junit
-    - git+https://github.com/microsoft/AI-Utilities.git@version/0.2.0
+    - junit-xml
+    - Microsoft-AI-Azure-Utilities==0.2.0
