--- a/environment.yml
+++ b/environment.yml
@@ -14,4 +14,5 @@ dependencies:
     - azureml-core
     - pylint-junit
     - junit-xml
+    - python-dotenv
     - Microsoft-AI-Azure-Utilities==0.2.0
