--- a/.ci/azure-pipelines-v2.yml
+++ b/.ci/azure-pipelines-v2.yml
@@ -35,3 +35,7 @@ stages:
     jobDisplayName: az-ml-realtime-score
     DefaultWorkingDirectory: $(System.DefaultWorkingDirectory)
     workload_vars: ../vars/az-ml-realtime-score.yml
+    flighting_release: false
+    flighting_preview: false
+    flighting_master: false
+    post_cleanup: false
