--- a/environment.yml
+++ b/environment.yml
@@ -14,6 +14,7 @@ dependencies:
     - azureml-core
     - pylint-junit
     - pytest-nunit
+    - nbconvert
     - junit-xml
     - python-dotenv
     - Microsoft-AI-Azure-Utilities==0.2.0
