Update azure-pipelines.yml for Azure Pipelines

--- a/.ci/azure-pipelines.yml
+++ b/.ci/azure-pipelines.yml
@@ -17,7 +17,7 @@ resources:
       endpoint: AIArchitecturesAndPractices-GitHub
 
 schedules:
-- cron: "*/10 * * * *"
+- cron: "0 */2 * * *"
   displayName: Daily midnight build
   always: true
   branches:
