--- a/environment.yml
+++ b/environment.yml
@@ -17,5 +17,5 @@ dependencies:
     - nbconvert
     - junit-xml
     - nbformat
-    - Microsoft-AI-Azure-Utility-Samples==0.2.5
+    - Microsoft-AI-Azure-Utility-Samples
     - python-dotenv
