--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ workspace_conf.yml
 *.output_ipynb
 .azureml
 pylint-results.xml
+project.yml
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -134,3 +135,4 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+/project.yml
