--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ workspace_conf.yml
 *.output_ipynb
 .azureml
 pylint-results.xml
+project.yml
 .idea
 score.py
 
@@ -14,16 +15,13 @@ assets/
 scripts/assets/
 .amlignore
 scripts/.amlignore
-__pycache__/
 scripts/__pycache__/
 
 # Environments
 .env
 
-# Jupyter Notebook
-.ipynb_checkpoints
-
 # Byte-compiled / optimized / DLL files
+__pycache__/
 *.py[cod]
 *$py.class
 
@@ -151,3 +149,4 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+/project.yml
